Update design: change to brown theme with new animations
- Changed color scheme from teal to elegant light brown/cream palette
- Updated all gradient colors to warm brown tones
- Replaced circular floating shapes with organic morphing shapes
- Added new 'drift' animation with shape morphing effects
- Updated footer text to 'Developed by Ritik Kumar Gupta'
- Enhanced glow effects with brown color tones
- More sophisticated and elegant appearance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
 
         <footer>
             <p>Built with FastAPI, LangChain & OpenAI</p>
-            <p class="creator">Crafted with ❤️ by <strong class="name-highlight">Ritik Kumar Gupta</strong></p>
+            <p class="creator">Developed by <strong class="name-highlight">Ritik Kumar Gupta</strong></p>
             <div class="social-links">
                 <a href="https://github.com/ritik-gupta001" target="_blank" class="social-icon">
                     <svg viewBox="0 0 24 24" fill="currentColor">
